2022/12/19
Changed GUI:
Added tabs with new Project tab to look for all plates of a given project.
Possibility to filter results for a given target name.
Updated Manual
Updated README and INSTALL (removing Raspbian)


2022/08/03
Updated Setup.py script to hopefully deal with later get-pip.py min_version increase.

Added possibility to score manually the drops (score 1 to 10)
If the user do not want to use the proposed nomenclature for scoring, just edit the file "preferences.py" and change
USESCORECLASS = True # True or False
to
USESCORECLASS = False # True or False

The assigned score will be displayed in the HeatMap.
However, you can modify the proposed nomenclature by editing in "preferences.py" the python list scoreclass.

#Define score classes. Edit to your need but Order is IMPORTANT !!!
scoreclass=['heavy prec',
            'clear',
            'phase sep',
            'granular prec',
            'crystalline prec',
            'spherulites',
            'micro-crystals',
            'multiple crystals',
            'small crystals',
            '3D crystal']


2022/05/20
Clicking on a well in the Plate overview windows allows loading of the corresponding well in the mainframe (picture + notes + Timeline)
modified a conflicting shortcut for autocrop (change from shift+C to shift+K)

2021/09/28
Added Docker build file and instructions

2021/09/09
Changed version to 1.2.4.1
Added possibility to use autoMARCO on a single image within the GUI
More efficient load of MARCO model.

2021/06/24
Changed version to 1.2.4
Added possibility to have an overview of the plate and export image of the plate (per subwell)
Added kit Hampton additives HT to database.

2021/06/18
Added functionality to import RockMaker XML files. Therefore, one can import XML files downloaded from RockMaker website
or import custom screens performed with the SPTLabtech Dragonfly and exported to XML.
Added Filters to only show subwells

2021/05/20